# clash-of-clans-bot

./: ARCHITECTURE.md  README.md  bot_logic.py  btree.py  mouse.py  pyproject.toml  requirements.txt  telateste.py  test.py
clash_of_clans_bot/: __init__.py  bot_logic.py  bot_main.py  btree.py  coc_api_test.py  mouse.py  test.py
clash_of_clans_bot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
clash_of_clans_bot/behaviors/: attack_behavior.py  attack_menu_behavior.py  disconnected_behavior.py  home_village_behavior.py  homescreen_popup_behavior.py  main_behavior.py  profile_behavior.py  shop_behavior.py  upgrade_menu_behavior.py
clash_of_clans_bot/bot_logic/: __init__.py
clash_of_clans_bot/bot_logic/behaviors/: __init__.py  behavior_tree.py
clash_of_clans_bot/bot_logic/enums/: state_enum.py
clash_of_clans_bot/bot_logic/nodes/: __init__.py  action.py  always_failure.py  always_success.py  inverter.py  node.py  parallel.py  repeat.py  selector.py  sequence.py  status.py
clash_of_clans_bot/context/: blackboard.py  context.py  intention.py  intentions.py
clash_of_clans_bot/context/controllers/: attack_controller.py  (+9 more)
clash_of_clans_bot/controllers/: attack_controller.py  main_controller.py  state_controller.py  ui_controller.py
clash_of_clans_bot/drivers/: mouse.py  vision.py
clash_of_clans_bot/enums/: screens_enum.py  state_behavior_map.py  state_enum.py  status_enum.py
clash_of_clans_bot/nodes/: __init__.py  action.py  always_failure.py  always_success.py  if_then_else.py  inverter.py  node.py  parallel.py  repeat.py  selector.py  sequence.py
(+9 files in other folders)
